<resources>
    <string name="app_name">teproject</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="registration_id">Registration ID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_student">Students</string>
    <string name="navigation_teacher">Mentors</string>
    <string name="navigation_projects">Projects</string>
    <string name="groupid">Group ID</string>
    <string name="mentorid">Mentor ID</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="members">Members</string>
    <string name="techstack">Tech Stack</string>
    <string name="updateGroup">Update Group Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="types">
        <item>Tech Stack</item>
    </string-array>
</resources>