<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GroupProfile">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="15dp"

        app:cardPreventCornerOverlap="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="My Group"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_gradient">

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/groupid"
                    android:textSize="17dp"></TextView>

                <EditText
                    style="@style/HomeCardContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:text="ABC"
                    android:textSize="15dp">

                </EditText>

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/mentorid"
                    android:textSize="17dp"></TextView>

                <EditText
                    style="@style/HomeCardContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="50dp"
                    android:text="XYZ"
                    android:textSize="15dp">

                </EditText>

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/problem_statement"
                    android:textSize="17dp"></TextView>

                <EditText
                    style="@style/HomeCardContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="115dp"
                    android:text="XXYYZZ"
                    android:layout_marginBottom="5dp"
                    android:textSize="15dp">

                </EditText>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="220dp"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_gradient"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/members"
                    style="@style/HomeCardTitle"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/members">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/m1"
                    android:text="Tanushree"
                    android:textSize="17dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/m2"
                    android:text="Shreya"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/m3"
                    android:text="Prathamesh T"
                    android:layout_marginLeft="10dp"
                    android:textSize="17dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/m4"
                    android:text="Prathamesh S"
                    android:layout_marginLeft="10dp"
                    android:textSize="17dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="15dp" 
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="376dp"
             app:cardPreventCornerOverlap="true">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:background="@drawable/home_gradient">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/techstack"
                     style="@style/HomeCardTitle"
                     android:layout_marginLeft="10dp"
                     android:textSize="17dp"
                     />

                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="10dp"
                     android:text="AA">

                 </EditText>

                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginLeft="10dp"
                     android:text="AB">

                 </EditText>

                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="5dp"
                     android:text="BB">

                 </EditText>




             </LinearLayout>

         </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</LinearLayout>