<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGroup"
    android:background="#0C0630"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#630436">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateGroup"
                android:textSize="20dp"
                android:textColor="@color/white"
                style="@style/HomeCardTitle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="30dp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_edit_24">
            </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_statement"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    style="@style/HomeCardTitle"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp">

                </TextView>

                <EditText
                    android:id="@+id/problem_statement_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/techstack"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    style="@style/HomeCardTitle"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp">

                </TextView>

                <LinearLayout
                    android:id="@+id/parent_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_list"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/tech_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:inputType="text"/>
                    <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:entries="@array/types"
                        android:gravity="right" />
                    <ImageView
                        android:id="@+id/delete_button"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_close_24"
                        android:onClick="onDelete"/>
                </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD"
                android:backgroundTint="#DFDCD9"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:onClick="onAddField"
                android:paddingRight="10dp">

            </Button>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAVE"
                android:onClick="onSubmit"
                android:backgroundTint="#DFDCD9"
                android:layout_marginTop="20dp"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

            </Button>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>